--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.2.0",
+    "react-select": "^5.10.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
